--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=monitoraai
+
+spring.datasource.url=jdbc:mariadb://localhost:3306/apimonitoraai
+spring.datasource.username=root
+spring.datasource.password=12345
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+# Hibernate (JPA)
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Dialeto Hibernate para MariaDB
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
