--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=monitoraai
 
 spring.datasource.url=jdbc:mariadb://localhost:3306/apimonitoraai
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=12345
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 # Hibernate (JPA)
