--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.show-sql=true
 
 # Dialeto Hibernate para MariaDB
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+
+#QRCode
+server.address=0.0.0.0
