feat: close button in qr code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=monitoraai
 
 spring.datasource.url=jdbc:mariadb://localhost:3306/apimonitoraai
 spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.password=
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 # Hibernate (JPA)
@@ -14,3 +14,4 @@ spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 
 #QRCode
 server.address=0.0.0.0
+server.port=8080
